--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Kola-Regular', sans-serif;
-}  
+}
+.mainContainer{
+    max-width: 1920px;
+    margin: 0 auto;
+}
 header{
     display: flex;
     justify-content: space-between;
@@ -20,11 +24,11 @@ header>div{
 } 
 .headerLeft{
     justify-content: flex-start;
-    padding-left: 20px;
+    padding-left: 150px;
 }  
 .headerRight{
     justify-content: flex-end;
-    padding-right: 20px;
+    padding-right: 150px;
 }  
 header img{
     width: 64px;
@@ -34,4 +38,22 @@ header a{
     text-decoration: none;
     color: inherit;
 }
-  
+/* Card */
+.cardMy{
+    width: 400px;
+    height: 420px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.cardMy img{
+    height: 252px;
+    width: 252px;
+}
+.infoSection{
+    width: 400px;
+    height: 398px;
+    background-color: white;
+}
