--- a/styles/pokemoncard.css
+++ b/styles/pokemoncard.css
@@ -59,7 +59,6 @@
     background-color: #f08030;
 }
 
-
 /* Big Pokemon Card */
 .overlay{
     position: fixed;
@@ -69,6 +68,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
 }
 .detail-card{
     background: #fff;
