--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -8,7 +8,12 @@
     align-items: center;
     justify-content: center;
     z-index: 9999;
+  }
+  .d_none {
     display: none;
+  }
+  .d_block {
+    display: block;
   }
   
   /* === DETAIL CARD === */
