--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,4 +1,3 @@
-/* === POKÉMON TYP-FARBEN === */
 .type.normal     { background-color: #A8A77A; color: #fff; }
 .type.fire       { background-color: #EE8130; color: #fff; }
 .type.water      { background-color: #6390F0; color: #fff; }
@@ -18,11 +17,11 @@
 .type.steel      { background-color: #B7B7CE; color: #000; }
 .type.fairy      { background-color: #D685AD; color: #000; }
 
-/* Stat Kreise */
-.stat.hp    { background-color: #78C850; color: #fff; } /* grün */
-.stat.atk   { background-color: #F08030; color: #fff; } /* orange */
-.stat.def   { background-color: #F8D030; color: #000; } /* gelb */
-.stat.spa   { background-color: #6890F0; color: #fff; } /* blau */
-.stat.spd   { background-color: #78C850; color: #fff; } /* grün */
-.stat.spe   { background-color: #F85888; color: #fff; } /* pink */
-.stat.total { background-color: #A8A77A; color: #fff; } /* grau/beige */
+
+.stat.hp    { background-color: #78C850; color: #fff; }
+.stat.atk   { background-color: #F08030; color: #fff; }
+.stat.def   { background-color: #F8D030; color: #000; }
+.stat.spa   { background-color: #6890F0; color: #fff; }
+.stat.spd   { background-color: #78C850; color: #fff; }
+.stat.spe   { background-color: #F85888; color: #fff; }
+.stat.total { background-color: #A8A77A; color: #fff; }
