--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -17,7 +17,7 @@
   max-width: 460px;
   background-color: #fff;
   border-radius: 20px;
-  padding: 2rem 1.5rem 5rem;
+  padding: 2rem 1.5rem 3rem;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
   overflow-y: auto;
   max-height: 90vh;
@@ -55,6 +55,13 @@
   text-align: center;
   z-index: 1;
   position: relative;
+}
+.pokemon_number_overlay{
+  margin-top: 0;
+  color: #999;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
 }
 .pokemon_name {
   font-size: 1.8rem;
