--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@
 header{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 300px;
-    height: 84px;
     background-color: #898989;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.headerCenter{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    gap: 25px;
 }
 header img{
     width: 64px;
